# implied-vol

./: .gitattributes  .gitignore  ACCURACY_REPORT.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yaml
benches/: bench.rs  implied_black_vol.rs  implied_black_vol_split.rs  implied_normal_vol.rs  implied_normal_vol_split.rs  price_bachelier.rs  price_black_scholes.rs  price_black_scholes_split.rs
benches/support/: mod.rs
examples/: basic_usage.rs  custom_special_functions.rs
source/: ImpliedNormalVolatility.cpp  README.txt  erf_cody.cpp  lets_be_rational.cpp  lets_be_rational.h  normaldistribution.cpp  normaldistribution.h  rationalcubic.cpp  rationalcubic.h
src/: bachelier.rs  bachelier_impl.rs  bs_option_price.rs  builder.rs  constants.rs  cxx.rs  erf_cody.rs  fused_multiply_add.rs  lets_be_rational.h  lets_be_rational.rs  lib.rs  normal_distribution.rs  normalised_bs.rs  rational_cubic.rs  special_function.rs
src/builder/: implied_black_volatility.rs  implied_black_volatility_normalised.rs  implied_normal_volatility.rs  price_bachelier.rs  price_black_scholes.rs  price_black_scholes_normalised.rs
src/lets_be_rational/: bachelier_impl.rs  bs_option_price.rs  constants.rs  householder.rs  rational_cubic.rs  special_function.rs
src/lets_be_rational/special_function/: error_function.rs  normal_distribution.rs
src/special_function/: erf_cody.rs  error_function.rs  normal_distribution.rs
