[package]
name = "implied-vol"
version = "2.0.0"
authors = ["Hikaru Nakashima <nakashima.alg57@gmail.com>"]
description = "A pure rust implementation of Peter Jäckel's implied volatility calculation"
edition = "2024"
repository = "https://github.com/nakashima-hikaru/implied-vol"
license-file = "LICENSE"
keywords = ["finance"]
categories = ["finance"]

[features]
default = []
fma = []
bench = ["cxx"]

[dependencies]
bon = "3.7.0"

[dev-dependencies]
rand = "0.9.2"

[dependencies.cxx]
version = "1"
optional = true

[build-dependencies]
cxx-build = "1"

[lints.clippy]
#pedantic = { level = "warn", priority = 1 }
#restriction = "warn"
cargo = { level = "warn", priority = 1 }
#nursery = "warn"
inline_always = { level = "allow", priority = 2 }
float_cmp = { level = "allow", priority = 2 }
too_many_lines = { level = "allow", priority = 2 }
many_single_char_names = { level = "allow", priority = 2 }
similar_names = { level = "allow", priority = 2 }

[profile.bench]
lto = true